# kolour

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
flatpak/: io.github.foofly.kolour.desktop  io.github.foofly.kolour.metainfo.xml  io.github.foofly.kolour.yml  kolour-launcher
packaging/arch/: PKGBUILD  README.md
src/kolour/: __init__.py  apply.py  auto.py  cli.py  colors_io.py  gtk.py  host.py  konsole.py  lookandfeel.py  matugen.py  registry.py  state.py  wallpaper.py
src/kolour/gtk/: Catppuccin-Frappe.css  Catppuccin-Latte.css  Catppuccin-Macchiato.css  Catppuccin-Mocha.css  Dracula.css  Everforest-Dark.css  Everforest-Light.css  Gruvbox-Dark.css  Gruvbox-Light.css  Nord.css  Sweet.css  TokyoNight-Storm.css  TokyoNight.css
src/kolour/gui/: app.py  main_window.py  swatch.py  theme_model.py
src/kolour/konsole/: Catppuccin-Frappe.colorscheme  Catppuccin-Latte.colorscheme  Catppuccin-Macchiato.colorscheme  Catppuccin-Mocha.colorscheme  Dracula.colorscheme  Everforest-Dark.colorscheme  Everforest-Light.colorscheme  Gruvbox-Dark.colorscheme  Gruvbox-Light.colorscheme  Nord.colorscheme  (+3 more)
tests/: conftest.py  smoke.py  test_apply.py  test_colors_io.py  test_matugen.py  test_registry.py  test_wallpaper.py
tests/fixtures/: appletsrc.example
tools/: generate-colors.py
tools/palettes/: Catppuccin-Frappe.yaml  Catppuccin-Latte.yaml  Catppuccin-Macchiato.yaml  Catppuccin-Mocha.yaml  Dracula.yaml  Everforest-Dark.yaml  Everforest-Light.yaml  Gruvbox-Dark.yaml  Gruvbox-Light.yaml  Nord.yaml  Sweet.yaml  TokyoNight-Storm.yaml  TokyoNight.yaml
(+24 files in other folders)
